mongoDB/deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: toures-mongodb-deployment
spec:
  selector:
    matchLabels:
      app: toures-mongodb
  replicas: 1 
  template:
    metadata:
      labels:
        app: toures-mongodb
    spec:
      containers:
      - name: toures-mongodb
        image: mongo
        ports:
        - containerPort: 27017
