mongoDB/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: toures-mongodb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /mongodb
        backend:
          serviceName: toures-mongo-servicio
          servicePort: 27017
